# sfml

./: .gitignore  CMakeLists.txt  e.sh
.devcontainer/: devcontainer.json  devcontainerOLDJSON  setup.sh  setupDOS.sh
include/: funciones.h
src/: adrian.cpp  beltran.cpp  fran.cpp  funciones.cpp  javier.cpp  main.cpp  raul.cpp  uriel.cpp
